# posthoc-keyword-dectection

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  run_all.sh
classes/: detector.py  phonetic.py  stt.py
classes/ms_phonetic/: __init__.py  distance.py  vectors.py
grader/: __init__.py  build_confusion.py  confusion_matrix.py  evaluate.py  results_viz.ipynb  transcribe.py  tune.py
grader/data/: phoneme_confusion.json  results.json  results_snr0.json  results_snr10.json  results_snr20.json  threshold_curves.json  threshold_curves_validation.json  thresholds.json  transcriptions_train.jsonl  transcriptions_validation.jsonl  transcriptions_validation_snr0.jsonl  transcriptions_validation_snr10.jsonl  transcriptions_validation_snr20.jsonl
