[project]
name = "posthoc-keyword-dectection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets[audio]>=2.14.0,<3.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pronouncing>=0.2.0",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "transformers>=5.3.0",
]
